Flask_yaml/service-docker-flask-test.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: "2021-05-03T12:40:58Z"
  labels:
    app: docker-flask-test
    app.kubernetes.io/component: docker-flask-test
    app.kubernetes.io/instance: docker-flask-test
    app.kubernetes.io/part-of: docker-flask-test-app
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:openshift.io/generated-by: {}
        f:labels:
          .: {}
          f:app: {}
          f:app.kubernetes.io/component: {}
          f:app.kubernetes.io/instance: {}
          f:app.kubernetes.io/part-of: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":5000,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
          f:deploymentconfig: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: Mozilla
    operation: Update
    time: "2021-05-03T12:40:58Z"
  name: docker-flask-test
  namespace: flask
  resourceVersion: "86529673"
  selfLink: /api/v1/namespaces/flask/services/docker-flask-test
  uid: 87400974-68be-4248-833e-372d73e7e6e3
spec:
  clusterIP: 172.30.73.106
  ports:
  - name: 5000-tcp
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: docker-flask-test
    deploymentconfig: docker-flask-test
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
